--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,10 +8,12 @@ environment:
   sdk: ">=2.0.0-dev.68.0 <3.0.0"
 
 dependencies:
-  intl: ">=0.1.0 <0.17.0"
+  intl: ^0.16.0
+
   flutter:
     sdk: flutter
-  date_utils: ^0.1.0
+  date_utils:
+    git: git@github.com:AppleEducate/date_utils.git
 
 dev_dependencies:
   flutter_test:
